@@ -1,7 +1,7 @@
 import functools
 
 from django.conf.urls import url, include
-from django.views.decorators.cache import cache_control
+from django.views.decorators.cache import never_cache
 from django.views.generic import TemplateView
 from django.http import Http404
 from django.views.defaults import page_not_found
@@ -112,5 +112,5 @@ urlpatterns = decorate_urlpatterns(urlpatterns, display_custom_404)
 # Decorate all views with cache settings to prevent caching
 urlpatterns = decorate_urlpatterns(
     urlpatterns,
-    cache_control(private=True, no_cache=True, no_store=True, max_age=0)
+    never_cache
 )
